@@ -1,3 +1,9 @@
+2008-10-28  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/CSharpTextEditorCompletion.cs:
+	* Gui/EventCreationCompletionData.cs: Worked on event handler
+	completion.
+
 2008-10-27  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/EventCreationCompletionData.cs: handled instantiated types for
